# orwell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  CMakeListsReactNative.txt  FfmpegDecoder.cpp  FfmpegDecoder.h  FrameUpdater.h  Makefile  MediaStream.cpp  MediaStream.h  OpenGlBufferQtQuick.cpp  OpenGlBufferQtQuick.h  OpenGlMaterialQQuickItem.cpp  OpenGlMaterialQQuickItem.h  OpenGlMaterialQtQuick.cpp  OpenGlMaterialShader.cpp  OpenGlVideoQtQuick.cpp  OpenGlVideoQtQuick.h  OpenGlVideoQtQuick2.cpp  OpenGlVideoQtQuick2.h  README.md  VideoConsumer.cpp  VideoConsumer.h  VideoProducer.cpp  VideoProducer.h  VideoSurface.cpp  VideoSurface.h  XVideoWidget.cpp  XVideoWidget.h  cmake_install.cmake  common_example.cpp  main.cpp  main2.qml  mainwindow.cpp  mainwindow.h  utils.cpp
cpp/common/: DecodedFrame.h  Decoder.cpp  Decoder.h  EncodedFrame.h  EncodedPacket.h  EncodedPackets.h  EncodedUnit.h  EncodedUnits.h  Exceptions.h  FfmpegDecoder.cpp  FfmpegDecoder.h  FfmpegDeleters.h  FfmpegHardwareDecoder.cpp  FfmpegHardwareDecoder.h  FfmpegSoftwareDecoder.cpp  FfmpegSoftwareDecoder.h  FileWriter.cpp  FileWriter.h  Frame.h  MediaStream.cpp  MediaStream.h  MyRTSPClient.cpp  MyRTSPClient.h  Orwell.cpp  Orwell.h  OrwellCInterface.cpp  OrwellCInterface.h  PixelFormats.cpp  PixelFormats.h  Profiler.cpp  Profiler.h  RTSPClient.h  Renderer.h  SLog.cpp  SLog.h  SimpleLogger.h  Singleton.cpp  Singleton.h  Stoppable.h  ThreadSafeDeque.h  (+5 more)
cpp/common/py-converter/: converter.py  formats.cpp
cpp/desktop/: CMakeLists.txt  Glue.cpp  Glue.h  OpenGlBufferItem.cpp  OpenGlBufferItem.h  OpenGlBufferQtQuick.cpp  OpenGlBufferQtQuick.h  OpenGlMaterialQQuickItem.cpp  OpenGlMaterialQQuickItem.h  OpenGlVideoQtQuick.cpp  OpenGlVideoQtQuick.h  OpenGlVideoQtQuick2.cpp  OpenGlVideoQtQuick2.h  VideoReceiver.h  VideoRecorder.cpp  VideoRecorder.h
cpp/l4tmultimedia/: NVDecoder.cpp  NVDecoder.h  NVDecoderDeleters.h  NaluUtils.cpp  NaluUtils.h
docker/: Dockerfile  build.sh  ffmpeg_build.CMakeLists.txt  ffmpeg_build.Dockerfile  ffmpeg_docker_build.sh  qt-installer-noninteractive.qs  run.sh  run_ffmpeg_docker.sh
docker/ffmpeg_builder/: Dockerfile  build.sh  build_android_arm64.sh  build_android_armhf32.sh  build_android_x86_64.sh  build_desktop.sh  run.sh
docker/ffmpeg_builder/scripts/: build_all.sh  build_android_arm64.sh  build_android_armhf32.sh  build_android_x86_64.sh  build_desktop.sh  build_linux.sh  build_windows.sh  ffmpeg_build.sh  load_variables.sh  load_variables2.sh
docker/gtk/: Dockerfile  build.sh  run.sh
docker/qt/: Dockerfile  build.sh  qt-installer-noninteractive.qs  run.sh
gtk/: CMakeLists.txt  Makefile  NVidiaFrameBufferRenderer.cpp  NVidiaFrameBufferRenderer.h  NVidiaRenderer.cpp  NVidiaRenderer.h  NvidiaRendererEGL.cpp  NvidiaRendererEGL.h  OpenGLArea.cpp  OpenGLArea.h  OpenGLArea2.cpp  OpenGLArea2.h  OpenglArea.cpp  OpenglArea.h  OpenglSmartRenderer.cpp  OpenglSmartRenderer.h  OpenglSmartRenderer2.cpp  OpenglSmartRenderer2.h  OpenglSmartRenderer3.cpp  OpenglSmartRenderer3.h  PixelFormats.cpp  PixelFormats.h  Program.cpp  Program.h  RenderParams.cpp  Shader.cpp  Shader.h  SimpleRenderer.cpp  SimpleRenderer.h  Singleton.cpp  color.frag  fragment.shader  fragment_rgb.shader  fragment_yuv.shader  lab  lab2.cpp  lab3 copy.cpp  lab3.cpp  main rgb.cp_p  main.cpp  (+20 more)
gtk/py-converter/: code.cpp  converter.py  formats.cpp
myRtspClient/: CMakeLists.txt  cmake_install.cmake
myRtspClient/myRtspClient/: myRtpTcpSession.cpp  sdp_data.cpp
orwellAndroid/app/: build.gradle
orwellAndroid/app/src/main/: AndroidManifest.xml
orwellAndroid/app/src/main/cpp/: CMakeLists.txt  MediaCodecDecoder.cpp  MediaCodecDecoder.h  native-codec-jni.cpp  native-lib.cpp  orwell-jni.cpp
orwellAndroid/gradle/wrapper/: gradle-wrapper.properties
orwellJS/: CamerasViewer.js  NiceButton.js  RealmSchemas.js  SettingsViewer.js  cameraViewer.js  default.realm  index.desktop.js  mergeObjects.js  niceButton.js  package-lock.json  package.json  settingsViewer.js  ubuntu-server.js  utils.js
orwellJS/desktop/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  main.cpp  run-app.sh
orwellJS/desktop/lib/: Makefile  cmake_install.cmake
orwellJS/desktop/lib/_orwell/: Makefile  cmake_install.cmake
orwellJS/desktop/lib/jrtplib/: Makefile  cmake_install.cmake
orwellJS/desktop/lib/orwell_/: Makefile  cmake_install.cmake
orwellJS/desktop/lib/react-native_autogen/: moc_predefs.h  mocs_compilation.cpp
orwellJS/desktop/orwell-module/: Makefile
orwellJS/modules/: CMakeLists.txt  mediaplayermanager.cpp  mediaplayermanager.h  orwellmediaplayer.cpp
orwellJS/modules/glue/: index.js
orwellJS/modules/glue/desktop/: CMakeLists.txt  gluemanager.cpp  gluemanager.h
orwellJS/modules/mediaplayer/desktop/: CMakeLists.txt  mediaplayermanager.cpp
orwellJS/onvif/: example_fetch.js  package-lock.json
orwellJS/onvif/lib/: cam.js  discovery.js
orwell_autogen/: mocs_compilation.cpp
orwell_autogen/EWIEGA46WW/: moc_OpenGlVideoQtQuick.cpp  moc_QFFmpegGLWidget.cpp  moc_XVideoWidget.cpp  moc_mainwindow.cpp
orwell_flutter/: README.md  pubspec.yaml
orwell_flutter/android/app/: build.gradle
orwell_flutter/ios/Runner/: Info.plist
orwell_flutter/ios/Runner.xcodeproj/: project.pbxproj
orwell_flutter/test/: widget_test.dart
orwelljs/: index.desktop.js  package.json
orwelljs/desktop/: Makefile  cmake_install.cmake  run-app.sh
orwelljs/desktop/lib/: Makefile  qrc_qml.cpp
orwelljs/desktop/lib/_orwell/: cmake_install.cmake
orwelljs/desktop/lib/orwell_autogen/: mocs_compilation.cpp
orwelljs/desktop/lib/react-native_autogen/: mocs_compilation.cpp
orwelljs/desktop/orwell-module/: cmake_install.cmake
orwelljs/orwell-module/: orwellmediaplayer.h  orwellmediaplayermanager.cpp  orwellmediaplayermanager.h
pycam/src/: lz_pycam.sh  pycam.py
qt/: CMakeLists.txt  Makefile  clean_everything.sh  main.cpp  main.qml  qrc_qml.cpp
react-native-desktop/Libraries/Components/MediaPlayer/: MediaPlayer.desktop.js
react-native-desktop/ReactQt/application/src/: main.qml
utilities/: getRtsp.js
(+113 files in other folders)
